# gpuless-thesis

./: .gitignore  README.md  env.sh
src/: .gitignore  CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  TcpSocked.cpp  TcpSocked.hpp  bench.cpp  bench.sh  benchmark-local.cpp  benchmark-tcp.cpp  executor_local.hpp  executor_tcp.hpp  gpuless.hpp  server-tcp.cpp  test.cc  test.cpp  test_tcp.cpp  utils.cpp  utils.hpp
src/adapter/: cubin_analysis.cpp  cubin_analysis.hpp  cuda_vdev.cpp  cuda_vdev.hpp  libcuadapter.cpp  libcuadapter.hpp
src/analysis/: libcudaanalysis.cpp
src/argument_analysis/: libarganalysis.cpp
src/benchmarks/: benchmark-all-cold-scientific-native.sh  benchmark-all-cold-scientific-old.sh  benchmark-all-cold-scientific.sh  benchmark-all-generate.sh  benchmark-all-remote.sh  benchmark-all-warm-pytorch-native.sh  benchmark-all-warm-pytorch-old.sh  benchmark-all-warm-pytorch.sh  benchmark-all.sh  benchmark-api-remoting-scientific-all.sh  benchmark-api-remoting-scientific.sh  benchmark-cold-scientific-old.sh  benchmark-cold-scientific.sh  benchmark-warm-pytorch-old.sh  benchmark-warm-pytorch.sh  benchmark.sh  make.sh
src/benchmarks/3d-unet-kits19/: .gitignore  batched.py  run-batched.py  run-local.sh  run.py  run_ault.sh  run_timed.sh
src/benchmarks/A100_partition_native_benchmark/: .a100-bench.swp  A100-bench-job.sh  A100-bench.py  a100-bench-local.sh  a100-bench-native.sh  a100-bench.sh  launch-local.sh  launch-native.sh  run-local.sh  run-native.sh  run.sh  test.sh
src/benchmarks/A100_partition_native_benchmark/results/: a100-mig-partitions-myocyte-2  a100-mig-partitions-native-resnet50-py  a100-mig-partitions-native-resnet50-py-4  a100-mig-partitions-native-resnet50-py-5  a100-mig-partitions-native-resnet50-py-6  a100-mig-partitions-native-resnet50-py-7  a100-mig-partitions-native-srad_v1-3  a100-mig-partitions-resnet50-py  a100-mig-partitions-resnet50-py-2  a100-mig-partitions-resnet50-py-3  a100-mig-partitions-resnet50-py-4  a100-mig-partitions-resnet50-py-5  a100-mig-partitions-resnet50-py-6  (+9 more)
src/benchmarks/BERT-SQuAD/: .gitignore  batched.py  run-batched.py  run-local.sh  run_timed.sh  test1-mig.py  test1.py  test2.py
src/benchmarks/alexnet/: run-batched.py  run-local.sh  run.py  run_batched.sh
src/benchmarks/bfs/: Makefile  bfs-mig  bfs.cu  run-local.sh  run_ault.sh  run_batched.sh  run_timed.sh
src/benchmarks/dwt2d/: .gitignore  Makefile  dwt2d  main.cu  run-local.sh  run_ault.sh
src/benchmarks/gaussian/: .gitignore  Makefile  run_ault.sh  run_timed.sh
src/benchmarks/hotspot/: Makefile  hotspot  hotspot.cu  make.config  run-local.sh  run_ault.sh
src/benchmarks/latency/: .gitignore  Makefile  latency-preinit  latency-preinit.cpp  latency.cu  run  run.sh  run_ault.sh  run_timed.sh
src/benchmarks/midas/: .gitignore  generate_gpuless_trace.sh  requirements.txt  run-batched.py  run.py  run_ault.sh  run_batched.sh
src/benchmarks/midas_warm/: run.py  run_timed.sh
src/benchmarks/myocyte/: .gitignore  Makefile  myocyte  output.txt  run  run_ault.sh  run_batched.sh  run_timed.sh
src/benchmarks/pathfinder/: .gitignore  Makefile  pathfinder.cu  run_ault.sh  run_timed.sh
src/benchmarks/resnet50/: .gdb_history  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  benchmark-batched.sh  cmake_install.cmake  cudnn-calls-unique  image-recognition  image-recognition-batched-total.cpp  image-recognition-batched.cpp  image-recognition.cpp  image-recogntion.cbp  pre_run.sh  run  run-local.sh  run.sh  run_ault.sh  run_timed.sh
src/benchmarks/resnet50-py/: run-batched.py  run-mig.py  run.py  run_ault.sh  run_batched.sh
src/benchmarks/resnext101/: run-batched.py  run.py
src/benchmarks/resnext50/: run-batched.py  run-local.sh  run.py  run_ault.sh
src/benchmarks/srad_v1/: .gitignore  Makefile  benchmark.sh  run  run_ault.sh  run_timed.sh  srad  srad_v1_reordered
src/benchmarks/srad_v2/: Makefile  srad
src/benchmarks/vgg19/: run-batched.py  run.py  run.sh  run_ault.sh  run_batched.sh  run_timed.sh
src/benchmarks/yolop/: run-batched.py  run-local.sh  run.py  run_ault.sh
src/executors/: executor_tcp.cpp  executor_tcp.hpp
src/include/llvmdemangler/: Demangler.h  ItaniumDemangle.h  Utility.h
src/kernels/: Makefile  common.cu  vadd.cu
src/manager/: manager.cpp  manager.hpp  manager_device.cpp  manager_device.hpp
src/results/: plot.py
src/schemas/: Makefile  api_boilerplate.py  cublas_calls.fbs  cublas_calls_generated.h  cuda_runtime_calls.fbs  cuda_runtime_calls_generated.h  cudevice_attributes.fbs  cudevice_attributes_generated.h  cudnn_calls.fbs  cudnn_calls_generated.h  execution_protocol.fbs  execution_protocol_generated.h  trace_execution_protocol.fbs  trace_execution_protocol_generated.h
src/test/: bench-srad_v1.sh  demangle_kernel_symbol.cpp  dwt2d  hotspot  log  resnet50  run.sh  srad_v1  test_tcp.cpp
src/test/debug/: find_missing_calls.sh
src/test/llvmdemangler/: ItaniumDemangle.h  StringView.h
src/test/unit/: .gdb_history  .gitignore  Makefile  async.cu  cudnn  cudnn.cu  globals  globals.cu  manykernel  manykernel.cu  manymodule.cu  mod1.cu  mod1.cuh  mod2.cu  mod2.cuh  objkernel  objkernel.cu  simple  simple.cu
src/trace/: cubin_analysis.cpp  cubin_analysis.hpp  cublas_api_calls.cpp  cublas_api_calls.hpp  cuda_api_calls.cpp  cuda_api_calls.hpp  cuda_trace.cpp  cuda_trace.hpp  cuda_trace_converter.cpp  cuda_trace_converter.hpp  cuda_virtual_device.cpp  cuda_virtual_device.hpp  cudnn_api_calls.cpp  cudnn_api_calls.hpp  dlsym_util.cpp  dlsym_util.hpp  hijack_cublas.cpp  hijack_cudnn.cpp  libgpuless.cpp  libgpuless.hpp  ptx_parser.cpp  tcp_gpu_session.cpp  tcp_gpu_session.hpp  trace_executor.cpp  trace_executor.hpp  trace_executor_local.cpp  trace_executor_local.hpp  trace_executor_tcp.cpp  trace_executor_tcp_client.cpp  trace_executor_tcp_client.hpp  trace_test  trace_test.cu  trace_test2  trace_test2.cu
src/trace/cubin_parser/: parser_util.cpp  parser_util.h  ptx_tree.cpp  ptx_tree.h  tree_parser.cpp  tree_parser.h
src/trace/manager/: manager.cpp  manager.hpp  manager_device.cpp  manager_device.hpp
(+865 files in other folders)
